[package]
name = "tower-request-id"
version = "0.2.0"
edition = "2018"
description = "A tower (hyper, axum, warp) service to add a unique id for every request"
keywords = ["tower", "hyper", "axum", "warp"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/imbolc/tower-request-id"

[dependencies]
http = "0.2"
tower-layer = "0.3"
tower-service = "0.3"
ulid = "1.0"

[dev-dependencies]
axum = "0.3"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tracing-subscriber = "0.3"
tower-http = { version = "0.1", features = ["trace"] }
rusty-hook = "0.11"
hyper = "0.14"
tracing = "0.1"
